# python-examples

./: .gitignore  .tool-versions  Makefile  README.md  TODO.md  coro.py  dir_compare.py  docker-compose.yml  environment.py  go  pyproject.toml  run  simple.py  start.py  test_modules.py
app_examples/fastapi/: .tool-versions  bundle_plugin.py  main.py
app_examples/fastapi/engine/: service.py
app_examples/fastapi/models/: context.py  estimate.py
app_examples/fastapi/tests/: test_yappi.py
app_examples/flask/: app.py
documentation/: TODO.md  anaconda.md  concurrency.md  environment.md  fastapi.md  linters.md  mypy.md  poetry.md  python-language.md  style.md  unit-testing.md
documentation/ds-from-scratch/: README.md
ds-from-scratch/: README.md  examples.py
edu/: causal-ml.md
edu/fastai_nlp/: 01-playground.ipynb  README.md
edu/harvard/cs50/: README.md  final-proect.md  week0-scratch.sb3
edu/harvard/cs50/week1/: Makefile  hello.c
edu/harvard/cs50/week1/cash/: Makefile  cash.c
edu/harvard/cs50/week1/mario-more/: Makefile  mario.c
edu/harvard/cs50/week2/: test.c
edu/harvard/cs50/week2/caesar/: Makefile  caesar.c
edu/harvard/cs50/week2/readability/: readability.c
edu/harvard/cs50/week2/scrabble/: Makefile  scrabble.c
edu/harvard/cs50/week3/phonebook/: Makefile  phonebook.c
edu/harvard/cs50/week3/plurality/: Makefile  plurality.c
edu/harvard/cs50/week3/runoff/: Makefile  runoff.c
edu/harvard/cs50/week3/sort/: answers.txt
edu/harvard/cs50/week4/: .gitignore  Makefile  addresses.c  week4.c
edu/harvard/cs50/week4/filter-less/: .gitignore  Makefile  filter.c  helpers.c
edu/harvard/cs50/week4/recover/: .gitignore  Makefile  linked-list  linked-list.c  recover  recover.c
edu/harvard/cs50/week4/volume/: .gitignore  volume  volume.c
edu/harvard/cs50/week5/: ll.c
edu/harvard/cs50/week5/inheritance/: inheritance  inheritance.c
edu/harvard/cs50/week5/speller/: Makefile  dictionary  dictionary.c  speller
edu/harvard/cs50/week6/: hello.py
edu/harvard/cs50/week6/dna/: dna.py
edu/harvard/cs50/week8/: index.html  index.js  style.css
edu/harvard/cs50p/: __main__.py  config.py  week0.py  week1.py  week2.py  week3.py  week4.py  week5.py  week6.py  week7.py  week8.py
exceptions/: test_exceptions.py
fastapi/: main.py  out.txt  pyproject.toml  requirements.txt  test_main.py
fastapi/models/: echo.py  estimate.py
fastapi/tests/: test_main.py
flask/: app.py
genai/: .tool-versions  README.md  pyproject.toml  rag.py
inout/: test_io.py
model.mdl/: model
model.mdl/vocab/: strings.json
modules/: __init__.py
notebooks/: pandas.ipynb
python_examples/: main.py
python_examples/fastapi/: bundle_plugin.py  contextlogger.py  main.py  pyproject.toml
python_examples/fastapi/models/: submod.py
python_examples/fastapi/tests/: test_yappi.py
stdlib/: test_stdlib.py
tests/algorithms/: test_iteration.py
tests/algorithms/fibonacci/: fib.py
tests/classes/: logger.py  manager.py  person.py  test_classes.py  test_dataclasses.py  test_enums.py
tests/control_flow/: test_control_flow.py
tests/data_structures/: test_dictionaries.py  test_lists.py  test_sets.py  test_tuples.py  test_udacity.py
tests/data_types/: test_string.py
tests/exceptions/: custom_derived_error.py  custom_error.py  test_exceptions.py
tests/fastapi/: __init__.py
tests/functions/: test_decorators.py  test_functions.py  test_scoping.py
tests/input_output/: test_io.py  test_json.py
tests/libraries/: test_contextlib.py  test_contextvars.py  test_pathlib.py  test_pydantic.py  test_urllib.py
tests/libraries/test_dask/: test_dask.py
tests/libraries/test_geopandas/: test_geopandas.py
tests/libraries/test_matplotlib/: test_matplotlib.py
tests/libraries/test_numpy/: test_numpy.py
tests/libraries/test_pandas/: test_feature_prep.py  test_indexing.py  test_pandas_0_basics.py  test_pandas_1_data_types.py  test_pandas_2_categorical.py  test_pandas_3_grouping_stacking.py  test_pandas_4_join.py  test_pandas_5_io.py  test_pandas_6_time_series.py  test_pandas_basics.py  test_pandas_data_types.py  test_pandas_io.py  test_pandas_join.py  test_plotting.py  test_updating.py
tests/libraries/test_pandas/data/: driver_features_v4.csv  store_features_v4.csv  store_location_features_v4.csv  test_categorical.csv
tests/libraries/test_plotly/: test_plotly.py
tests/libraries/test_polars/: test_polars.py
tests/libraries/test_proto/: messages.proto  test_proto.py
tests/libraries/test_proto/compiled/: messages_pb2.py
tests/libraries/test_pytest/: conftest.py
tests/libraries/test_pytorch/: test_cnn.py  test_rnn.py  test_torch.py  test_tutorial.py
tests/libraries/test_redis/: test_redis.py
tests/libraries/test_requests/: test_requests.py
tests/libraries/test_sklearn/: README.md  test_basics.py  test_model_evaluation.py  test_onnx.py  test_pipelines.py  test_preprocessing.py  test_simple.py  test_text_data.py  test_trees.py
tests/libraries/test_spacy/: test_spacy.py
tests/machine_learning/: test_feature_engineering.py
tests/modules/: __init__.py  test_config.py  test_modules.py
tests/modules/core/: __init__.py  appconfig.py
tests/modules/pkg1/: mod1.py
tests/modules/pkg2/: mod2.py
tests/primitive_types/: test_operators.py  test_primitive_types.py  test_strings.py  test_types.py
tests/stdlib/: test_argparse.py  test_array.py  test_asyncio.py  test_builtins.py  test_collections.py  test_functools.py  test_inspect.py  test_logging.py  test_os.py  test_stdlib.py  test_unittest_mock.py
tests/stdlib/test_asyncio/: concurrency.md  test_asyncio.py
tests/type_examples/: __init__.py  test_classes.py  test_dictionaries.py  test_functions.py  test_lists.py  test_sets.py  test_tuples.py
tests/type_examples/classes/: manager.py  person.py  printer.py
tests/type_examples/custom_objects/: manager.py
tests/typing/: test_typing.py
tests/udacity_intro_to_python/: test_lesson_7.py
type_examples/: test_functions.py  test_lists.py  test_objects.py  test_strings.py
type_examples/custom_objects/: person.py
utilities/: environment.py  profile.py
(+71 files in other folders)
