[tool.poetry]
name = "python-examples"
version = "0.0.1"
description = "Python example code"
authors = ["Damon Allison <damon@damonallison.com>"]
license = "MIT"
readme = "README.md"

# Dependencies are specified with version constraints following:
# https://python-poetry.org/docs/dependency-specification/
#
# Caret: Does not modify the left most non-zero digit
#   ^1.2.3 == >=1.2.3 <2.0
#   ^0.0.3 == >=0.0.3 <0.0.4
#
# Tilde:
#   If you specify a major.minor.patch or major.minor, only patch level changes are allowed.
#   If you specify a major, then minor and patch are allowed.
#
#   ~1.2.3   >=1.2.3 <1.3.0
#   ~1.2     >=1.2.0 <1.3.0
#   ~1       >=1.0.0 <2.0.0
#
# Wildcard:
#   Allow for the latest version where the wildcard exists.
#
#   *     >=0.0.0
#   1.*   >=1.0.0 <2.0.0
#   1.2.* >= 1.2.0 <1.3.0
[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dask = { version = "^2023.12.1", extras = ["distributed"] }
graphviz = "^0.20"
joblib = "^1.2.0"
lightgbm = "^4.2.0"
matplotlib = "^3.5.1"
nltk = "^3.7"
pandas = "^2.1.4"
protobuf = "^4.25.1"
py = "^1.11.0"
redis = "^5.0.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13"
# skl2onnx = "^1.0.0"
# onnxruntime = "^1.15.1"
spacy = "^3.3.0"
SQLAlchemy = "^2.0.23"
xgboost = "^2.0.3"
pyarrow = "^14.0.2"
polars = "^0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
torch = "^2.1.2"
cowsay = "^6.1"
emoji = "^2.11.0"
pyfiglet = "^1.0.2"
torchvision = "^0.18.0"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
pytest-asyncio = "^0"
mypy = "^1.8.0"
ipython = "^8.20.0"
yappi = "^1.6.0"
requests = "^2.31.0"
requests-mock = "^1.11.0"
johnnydep = "^1.20.4"

[tool.pytest.ini_options]
# NOTE: The pytest team is reserving [tool.pytest] for future use, when they are
# ready to fully support pyproject.toml. [tool.pytest.ini_options] is used in
# the interim.
#
# "auto" makes all `async` tests asyncio driven, avoiding the need to mark each
# `async def test_` function with @pytest.mark.asyncio
#
# NOTE: This is *not* working. For some reason, the option is unrecognized.
#
# asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"

#
# Register a custom marker for ml. By default, `make test` will skip ML tests by
# running:
#
# pytest -m "not slow"
#
# For more information on markers:
# https://docs.pytest.org/en/stable/how-to/mark.html
markers = [
    "ml: marks tests as ml (which take a long time to run) - deselect with '-m \"not slow\"'",
    "plot: marks test has showing a plot (UI) - deselect with '-m \"not mark\"",
]

[tool.mypy]
python_version = "3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
