[tool.poetry]
name = "fastapi_examples"
version = "0.1.0"
description = ""
authors = ["Damon Allison <damon@damonallison.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.10b0"
ipython = "^7.29.0"
yappi = "^1.3.3"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-m \"not integration\""
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
