[tool.poetry]
name = "genai"
version = "0.1.0"
description = "a sample gen ai project"
authors = ["Damon Allison <damon@damonallison.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.4,<3.13"
transformers = "^4.46.2"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
