[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Damon Allison <damon@shipt.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0"
starlette-context = "^0.3.4"
uvicorn = {version = "^0.18.3", extras = ["standard"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
